# datathon_fiap_postech

./: .gitignore  README.md  datathon.ipynb  eda_will.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml
data/raw/: BASE_DE_DADOS_PEDE_2024_DATATHON.xlsx  PEDE_PASSOS_DATASET_FIAP_ANTIGO.xlsx  full_dataset.xlsx
notebooks/: eda_v1.ipynb
notebooks/001_postech_file/: DATATHON-PASSOS-MÁGICOS.ipynb  eda.ipynb  eda_datathon_graficos_ajustados_series.ipynb
src/mlops_portfolio/: __init__.py
src/mlops_portfolio/data_ingestion/: __init__.py
src/mlops_portfolio/data_processing/: __init__.py
src/mlops_portfolio/evaluation/: __init__.py
src/mlops_portfolio/features/: __init__.py
src/mlops_portfolio/pipelines/: __init__.py
src/mlops_portfolio/serving/: __init__.py
src/mlops_portfolio/utils/: __init__.py
