[tool.poetry]
name = "mlops-portfolio"
version = "0.1.0"
description = "Skeleton MLOps para portfólio júnior com Poetry."
authors = ["Seu Nome <voce@email.com>"]
readme = "README.md"
packages = [{ include = "mlops_portfolio", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]


