[tool.poetry]
name = "mlops-portfolio"
version = "0.1.0"
description = "Skeleton MLOps para portfólio júnior com Poetry."
authors = ["Seu Nome <voce@email.com>"]
readme = "README.md"
packages = [{ include = "mlops_portfolio", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.0"
numpy = "^2.4.1"
openpyxl = "^3.1.5"
pyarrow = "^23.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]


